# autovpn

./: .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  updater.json  vite.config.ts
.github/workflows/: release.yml
src/: global.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  single_instance.rs
src-tauri/src/keyring_store/: mod.rs  secrets.rs  vpn_credentials.rs
src-tauri/src/settings/: mod.rs  secure.rs  vpn.rs
src-tauri/src/system_integration/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/vpn/: credentials.rs  linux.rs  macos.rs  mod.rs  nm_monitor.rs  profile.rs  totp.rs  types.rs  unsupported.rs  windows.rs
src-tauri/src/window_behavior/: mod.rs
src/app/: App.module.css  App.tsx
src/app/components/AppFooter/: AppFooter.module.css  AppFooter.tsx
src/app/components/AppHeader/: AppHeader.module.css  AppHeader.tsx
src/app/layouts/: AppLayout.module.css  AppLayout.tsx  AppShellLayout.tsx  index.ts
src/app/layouts/MainLayout/: MainLayout.module.css  MainLayout.tsx
src/app/routers/: paths.ts  routes.tsx
src/features/home/components/: VpnLogConsoleCard.module.css  VpnLogConsoleCard.tsx  VpnProfileCredentialsModal.tsx  VpnProfileListCard.module.css  VpnProfileListCard.tsx  VpnStatusCard.module.css  VpnStatusCard.tsx
src/features/home/pages/: HomePage.module.css  HomePage.tsx
src/features/settings/: constants.ts
src/features/settings/components/: AboutAuthorCard.tsx  AppLockCard.tsx  AppVersionCard.tsx  AppearanceCard.module.css  AppearanceCard.tsx  AutoConnectCard.tsx  AutoReconnectCard.tsx  ChangePinModal.tsx  DisableAppLockModal.tsx  EnableAppLockModal.tsx  SettingField.module.css  SettingField.tsx  SystemIntegrationCard.module.css  SystemIntegrationCard.tsx  WindowBehaviorCard.tsx  index.ts
src/features/settings/pages/: SettingsPage.module.css  SettingsPage.tsx
src/shared/appLock/: AppLockOverlay.module.css  AppLockOverlay.tsx  AppLockProvider.tsx  PinStrengthBar.module.css  PinStrengthBar.tsx  context.ts  index.ts  pinErrors.ts  pinPolicy.ts  pinStrength.ts  useAppLock.ts
src/shared/components/NotFoundPage/: NotFoundPage.module.css  NotFoundPage.tsx
src/shared/components/WindowResizeHandles/: WindowResizeHandles.module.css  WindowResizeHandles.tsx  index.ts
src/shared/components/WindowTitleBar/: WindowControls.module.css  index.ts  (+3 more)
src/shared/hooks/: index.ts  useWindowControls.ts
src/shared/i18n/: I18nLanguageSync.tsx  config.ts  index.ts  options.ts
src/shared/layout/: index.ts  pageContent.module.css  settingCard.module.css
src/shared/lib/: platform.ts
src/shared/settings/: appLock.ts  appearance.ts  colorSchemeManager.ts  systemIntegration.ts  vpn.ts  windowBehavior.ts
src/shared/systemIntegration/: index.ts  useSystemIntegration.ts
src/shared/vpn/: ConnectionStatusBadge.module.css  ConnectionStatusBadge.tsx  VpnStatusContext.ts  VpnStatusProvider.tsx  api.ts  index.ts  types.ts  useVpnStatus.ts
src/shared/windowBehavior/: WindowBehaviorProvider.tsx  context.ts  index.ts  tray.ts  useWindowBehavior.ts
(+8 files in other folders)
