[package]
name = "AutoVPN"
version = "0.5.0"
description = "A premium system tray utility for auto-connecting, auto-reconnecting, and managing dynamic OTP/TOTP credentials for system VPN connections."
authors = ["Hai Pham Ngoc <ngochai285nd@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/haiphamngoc-dev/autovpn"
homepage = "https://github.com/haiphamngoc-dev/autovpn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "autovpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
aes-gcm = "0.10"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
keyring-core = "1.0.0"
thiserror = "2.0.18"
chrono = "0.4.44"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
data-encoding = "2.9"
totp-lite = "2.0"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }
zbus = { version = "5.15", default-features = false, features = ["tokio"] }
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = "1.0.0"
